--- a/amigos.html
+++ b/amigos.html
@@ -12,25 +12,20 @@
         width: 100%;
         margin-bottom: 10px;
       }
-
       .card-img-top {
         height: 100px;
       }
-
       .card-body {
         margin: 0 0 0 0;
         padding: 0 0 0 0;
         height: 100px;
       }
-
       .card-body p {
         margin-left: 160px;
       }
-
       .avat {
         position: relative;
       }
-
       .avat img {
         height: 100px;
         width: 100x;
@@ -40,7 +35,6 @@
         border-radius: 50%;
         border: 1px solid #ddd;
       }
-
       .avat span {
         position: absolute;
         top: -40px;
@@ -60,7 +54,6 @@
       }
     </style>
   </head>
-
   <body class="d-flex flex-column h-100">
     <header class="header">
       <div class="container navbar d-flex">
@@ -71,14 +64,18 @@
             </li>
             <li class="breadcrumb-item">
               <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
-              &nbsp;
               <a href="ug.html">ئۇيغۇرچە</a>
+              <a href="bo.html">བོད་སྐད་</a>
+              <a href="tai.html">Tai</a>
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
             </li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
             </li>
             <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
@@ -171,9 +168,7 @@
                 <span>Gogo</span>
               </a>
             </div>
-            <p class="card-text">
-              《Gogo变成猫猫了》
-            </p>
+            <p class="card-text">《Gogo变成猫猫了》</p>
           </div>
         </div>
         <!--分割线，没用的-->
@@ -186,13 +181,10 @@
                 <span>绫香</span>
               </a>
             </div>
-            <p class="card-text">
-              是可爱的绫香小姐！
-            </p>
+            <p class="card-text">是可爱的绫香小姐！</p>
           </div>
         </div>
         <!--分割线，没用的-->
-
         <p>
           <b>如何添加友链？</b><br />
           向
