--- a/ar.html
+++ b/ar.html
@@ -7,9 +7,10 @@
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.rtl.min.css" rel="stylesheet" />
     <style>
-      body {
-        font-family: "Noto Sans", "Noto Naskh Arabic UI";
-      }
+        @import url("https://fonts.googleapis.com/css2?family=Amiri&family=Noto+Sans");
+        main{
+            font-family:'Noto Sans','Amiri','Noto Sans Arabic',sans-serif;
+        }
       .sociales a {
         text-decoration: none;
       }
@@ -18,7 +19,6 @@
       }
     </style>
   </head>
-
   <body class="d-flex flex-column h-100">
     <header class="header">
       <div class="container navbar d-flex">
@@ -28,14 +28,19 @@
               <a href="index.html"><i class="moji moji-uk"></i>English</a>
             </li>
             <li class="breadcrumb-item">
-              <a href="zh.html"><i class="moji moji-cn"></i>中文</a>&nbsp;
+              <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
               <a href="ug.html">ئۇيغۇرچە</a>
+              <a href="bo.html">བོད་སྐད་</a>
+              <a href="tai.html">Tai</a>
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
             </li>
             <li class="breadcrumb-item active">
               <i class="moji moji-ar"></i>العربية
+            </li>
+            <li class="breadcrumb-item">
+              <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
             </li>
             <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
@@ -139,7 +144,7 @@
                 <i class="moji moji-github"></i>
               </div>
               <div class="card-body">
-                <img src="https://estela.moe/https://estela.moe/fetchgraph.php" />
+                <img src="https://estela.moe/fetchgraph.php" />
                 <img
                   src="https://github-readme-stats.vercel.app/api?username=saeziae&show_icons=true"
                 />
