--- a/bo.html
+++ b/bo.html
@@ -1,12 +1,24 @@
 <!DOCTYPE html>
-<html class="h-100" lang="zh-Hans">
+<html class="h-100" lang="bo">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>山前的主頁</title>
+    <title>རི་མདུན་འི་དྲ་ངོས།</title>
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <style>
+      @import url(https://victorlee.github.io/Yalasoo-Qomolangma-Tibetan-fonts/stylesheet.css);
+      main {
+        font-family: "Qomolangma-Uchen Suring", sans-serif;
+      }
+      strong {
+        font-family: Qomolangma-Chuyig;
+        font-size: 1.5em;
+        font-weight: normal;
+      }
+      .art {
+        font-family: Qomolangma-Tsuring;
+      }
       .card img {
         max-width: 100%;
       }
@@ -17,13 +29,13 @@
       <div class="container navbar d-flex">
         <nav class="justify-content-start" aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item">
-              <a href="index.html"><i class="moji moji-uk"></i>English</a>
-            </li>
             <li class="breadcrumb-item active">
-              <i class="moji moji-cn"></i>中文
+              <i class="moji moji-uk"></i>English
+            </li>
+            <li class="breadcrumb-item">
+              <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
               <a href="ug.html">ئۇيغۇرچە</a>
-              <a href="bo.html">བོད་སྐད་</a>
+              བོད་སྐད་
               <a href="tai.html">Tai</a>
             </li>
             <li class="breadcrumb-item">
@@ -43,10 +55,6 @@
             </li>
           </ol>
         </nav>
-        <div class="btn-group justify-content-end">
-          <a class="btn btn-outline-primary btn-sm active">漢</a>
-          <a href="zh.html" class="btn btn-outline-primary btn-sm">汉</a>
-        </div>
       </div>
     </header>
     <main class="flex-shrink-0">
@@ -68,10 +76,14 @@
             <span
               class="badge rounded-pill bg-secondary border-3"
               style="position: absolute; left: 105px; top: -25px"
-              >😔 憂鬱中</span
+              >😔 ཡིད་མུག་པ།</span
             >
             <div class="card-body">
-              <h2 class="card-title" style="margin-left: 130px">山前</h2>
+              <h2 class="card-title" style="margin-left: 130px">
+                <span class="art">རི་མདུན་</span>
+                <span style="font-size: 0.6em">༺ཧྲན་ཇནས་༻</span>
+              </h2>
+              <strong>འཁོར་ལོ་རི་སར་སླེབས་ན་ལམ་རྗ་ཐོན།</strong>
               <table>
                 <tr>
                   <td>
@@ -81,7 +93,7 @@
                   </td>
                   <td>
                     <a href="https://twitter.com/saeziae"
-                      ><i class="moji moji-twitter"></i>Twitter @saeziae</a
+                      ><i class="moji moji-twitter"></i>ཏྭི་ཏར་ @saeziae</a
                     >
                   </td>
                 </tr>
@@ -93,40 +105,40 @@
                   </td>
                   <td>
                     <a href="https://t.me/esteladaily"
-                      ><i class="moji moji-telegram"></i>Telegram 群</a
+                      ><i class="moji moji-telegram"></i>ཐེ་ལེ་ཀྲམ་</a
                     >
                   </td>
                 </tr>
                 <tr>
                   <td>
                     <a href="https://space.bilibili.com/173947605"
-                      ><i class="moji moji-bilibili"></i>嗶哩嗶哩</a
+                      ><i class="moji moji-bilibili"></i>པི་ལི་པི་ལི་</a
                     >
                   </td>
                   <td>
                     <a
                       href="https://www.youtube.com/channel/UCnqO6MvMqQ9pXKcwjp_gLBQ"
-                      ><i class="moji moji-youtube"></i>YouTube</a
+                      ><i class="moji moji-youtube"></i>ཡུ་ཐུབ་</a
                     >
                   </td>
                 </tr>
               </table>
-              <p>你好呀 👋🏻 這邊是山前</p>
+              <br />
+              <p>བཀྲ་ཤིས་བདེ་ལེགས། 👋🏻 ང་ནི་རི་མདུན།</p>
               <p>
                 <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i>
-                跨兒驕傲。 <a href="https://mtf.wiki/">MtF-Wiki</a>維護人員。
+                ཕོ་མོའི་དབྱེ་བ་ལས་བརྒལ་མཁན།
+                <a href="https://mtf.wiki/">MtF-Wiki</a> ཁོངས་མི།
               </p>
-              <p>JK格裙那可太喜歡了 🍱喫貨 吳語母語者</p>
-              <p>👩🏻‍🎓 現在在大學攻讀西班牙語。</p>
-              <p>📷 攝影。音遊，maimai陷入中，SDVX练习中。</p>
-              <p>✈️ 想要周遊世界的旅行者，去過好多國家了。</p>
-              <p>👀 喜歡語言學、NLP、煉丹之類亂七八糟的東西。</p>
-              <p>⌨️ <i class="moji moji-python"></i>Python 一把梭</p>
+              <p>👩🏻‍🎓 ངས་སློབ་ཆེན་དུ་སི་ཕེན་གྱི་སྐད་སྦྱང་བཞིན་ཡོད་།</p>
+              <p>📷 བརྙན་ལེན། རོལ་མོའི་རོལ་རྩེད་། maimai, Sound Voltex.</p>
+              <p>✈️ ང་ཡུལ་སྐོར་ལ་དགའ་། ང་ས་ཆ་མང་པོར་སོང་མྱོང་།</p>
+              <p>👀 ང་སྒྲ་རིག་པ་དང་རྩིས་འཁོར་ལ་སྤྲ་བ་ཡོད་།</p>
               <p>
-                <del><i class="moji moji-php"></i>PHP 是世界上最好的語言！</del>
+                ⌨️ <i class="moji moji-python"></i>Python<br />
+                <i class="moji moji-php"></i>PHP
               </p>
-              <p><i class="moji moji-archlinux"></i>ArchLinux 用戶。</p>
-              <p><img src="assets/images/feed.png" /><br />投食山前</p>
+              <p><i class="moji moji-archlinux"></i>ArchLinux</p>
             </div>
           </div>
         </div>
@@ -147,13 +159,7 @@
     </main>
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
-        <span class="text-muted">
-          &copy;<span id="year"></span> 山前 <a href="amigos.html">友情链接</a>
-          <br />
-          <a href="https://icp.gov.moe/?keyword=20223233" target="_blank"
-            >萌ICP备20223233号</a
-          >
-        </span>
+        <span class="text-muted"> &copy;<span id="year"></span> Estela </span>
       </div>
     </footer>
     <script src="assets/bootstrap.bundle.min.js"></script>
