--- a/eo.html
+++ b/eo.html
@@ -12,7 +12,6 @@
       }
     </style>
   </head>
-
   <body class="d-flex flex-column h-100">
     <header class="header">
       <div class="container navbar d-flex">
@@ -23,14 +22,18 @@
             </li>
             <li class="breadcrumb-item">
               <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
-              &nbsp;
               <a href="ug.html">ئۇيغۇرچە</a>
+              <a href="bo.html">བོད་སྐད་</a>
+              <a href="tai.html">Tai</a>
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
             </li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
             </li>
             <li class="breadcrumb-item active">
               <i class="moji moji-eo"></i>Esperanto
