--- a/lat.html
+++ b/lat.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="h-100" lang="lat">
+<html class="h-100" lang="la">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -12,7 +12,6 @@
       }
     </style>
   </head>
-
   <body class="d-flex flex-column h-100">
     <header class="header">
       <div class="container navbar d-flex">
@@ -23,14 +22,18 @@
             </li>
             <li class="breadcrumb-item">
               <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
-              &nbsp;
               <a href="ug.html">ئۇيغۇرچە</a>
+              <a href="bo.html">བོད་སྐད་</a>
+              <a href="tai.html">Tai</a>
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
             </li>
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
+            </li>
+            <li class="breadcrumb-item">
+              <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
             </li>
             <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
