--- a/ru.html
+++ b/ru.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html class="h-100" lang="zh-Hans">
+<html class="h-100" lang="ru">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>山前的主頁</title>
+    <title>Домашняя страница Предгорка</title>
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <style>
@@ -20,8 +20,8 @@
             <li class="breadcrumb-item">
               <a href="index.html"><i class="moji moji-uk"></i>English</a>
             </li>
-            <li class="breadcrumb-item active">
-              <i class="moji moji-cn"></i>中文
+            <li class="breadcrumb-item">
+              <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
               <a href="ug.html">ئۇيغۇرچە</a>
               <a href="bo.html">བོད་སྐད་</a>
               <a href="tai.html">Tai</a>
@@ -32,8 +32,8 @@
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
             </li>
-            <li class="breadcrumb-item">
-              <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
+            <li class="breadcrumb-item active">
+              <i class="moji moji-su"></i>Русский
             </li>
             <li class="breadcrumb-item">
               <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
@@ -43,10 +43,6 @@
             </li>
           </ol>
         </nav>
-        <div class="btn-group justify-content-end">
-          <a class="btn btn-outline-primary btn-sm active">漢</a>
-          <a href="zh.html" class="btn btn-outline-primary btn-sm">汉</a>
-        </div>
       </div>
     </header>
     <main class="flex-shrink-0">
@@ -68,10 +64,11 @@
             <span
               class="badge rounded-pill bg-secondary border-3"
               style="position: absolute; left: 105px; top: -25px"
-              >😔 憂鬱中</span
+              >😔 Депрессия</span
             >
             <div class="card-body">
-              <h2 class="card-title" style="margin-left: 130px">山前</h2>
+              <h2 class="card-title" style="margin-left: 130px">Предгорка</h2>
+              <strong>С Интернационалом, воспрянет род людской!</strong>
               <table>
                 <tr>
                   <td>
@@ -81,7 +78,7 @@
                   </td>
                   <td>
                     <a href="https://twitter.com/saeziae"
-                      ><i class="moji moji-twitter"></i>Twitter @saeziae</a
+                      ><i class="moji moji-twitter"></i>Твиттер @saeziae</a
                     >
                   </td>
                 </tr>
@@ -93,40 +90,46 @@
                   </td>
                   <td>
                     <a href="https://t.me/esteladaily"
-                      ><i class="moji moji-telegram"></i>Telegram 群</a
+                      ><i class="moji moji-telegram"></i>Группа Телеграмма</a
                     >
                   </td>
                 </tr>
                 <tr>
                   <td>
                     <a href="https://space.bilibili.com/173947605"
-                      ><i class="moji moji-bilibili"></i>嗶哩嗶哩</a
+                      ><i class="moji moji-bilibili"></i>Билибили</a
                     >
                   </td>
                   <td>
                     <a
                       href="https://www.youtube.com/channel/UCnqO6MvMqQ9pXKcwjp_gLBQ"
-                      ><i class="moji moji-youtube"></i>YouTube</a
+                      ><i class="moji moji-youtube"></i>Ютубе</a
                     >
                   </td>
                 </tr>
               </table>
-              <p>你好呀 👋🏻 這邊是山前</p>
+              <p>Привет, товарищ! 👋🏻 Я Предгорка</p>
               <p>
                 <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i>
-                跨兒驕傲。 <a href="https://mtf.wiki/">MtF-Wiki</a>維護人員。
+                Гордость трансгендера. Участник
+                <a href="https://mtf.wiki/">MtF-Wiki</a>.
               </p>
-              <p>JK格裙那可太喜歡了 🍱喫貨 吳語母語者</p>
-              <p>👩🏻‍🎓 現在在大學攻讀西班牙語。</p>
-              <p>📷 攝影。音遊，maimai陷入中，SDVX练习中。</p>
-              <p>✈️ 想要周遊世界的旅行者，去過好多國家了。</p>
-              <p>👀 喜歡語言學、NLP、煉丹之類亂七八糟的東西。</p>
-              <p>⌨️ <i class="moji moji-python"></i>Python 一把梭</p>
               <p>
-                <del><i class="moji moji-php"></i>PHP 是世界上最好的語言！</del>
+                🍱 "Гурман".Носитель
+                <a href="https://en.wikipedia.org/wiki/Wu_Chinese">Уского</a>
+                языка.
               </p>
-              <p><i class="moji moji-archlinux"></i>ArchLinux 用戶。</p>
-              <p><img src="assets/images/feed.png" /><br />投食山前</p>
+              <p>👩🏻‍🎓 Я изучаю испанский язык в университете.</p>
+              <p>📷 Фотография. Игрок в ритм-игры: maimai и Sound Voltex.</p>
+              <p>✈️ Я люблю путешествовать! Я побывала во многих странах.</p>
+              <p>👀 Я интересуюсь лингвистикой, NLP и другими вещами.</p>
+              <p>
+                ⌨️ <i class="moji moji-python"></i>Python<br />
+                <del
+                  ><i class="moji moji-php"></i>PHP - лучший язык в в мире!</del
+                >
+              </p>
+              <p>пользователь <i class="moji moji-archlinux"></i>ArchLinux.</p>
             </div>
           </div>
         </div>
@@ -148,11 +151,8 @@
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
         <span class="text-muted">
-          &copy;<span id="year"></span> 山前 <a href="amigos.html">友情链接</a>
-          <br />
-          <a href="https://icp.gov.moe/?keyword=20223233" target="_blank"
-            >萌ICP备20223233号</a
-          >
+          &copy;<span id="year"></span> Предгорка
+          <a href="amigos.html">Товарищи</a>
         </span>
       </div>
     </footer>
