--- a/tai.html
+++ b/tai.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
-<html class="h-100" lang="zh-Hans">
+<html class="h-100" lang="tai">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>山前的主頁</title>
+    <title>ᩉ᩠ᨶ᩶ᩣᩁ᩠ᨠᩯᩑᩈ᩠ᨲᩮᩃᩣ</title>
     <link href="assets/moji.css" rel="stylesheet" />
     <link href="assets/bootstrap.min.css" rel="stylesheet" />
     <style>
+      @font-face {
+        font-family: NSTahlom;
+        src: url(assets/NSTahlom.otf);
+      }
+      body {
+        font-family: Noto Sans, NSTahlom, sans-serif;
+      }
       .card img {
         max-width: 100%;
       }
@@ -17,14 +24,14 @@
       <div class="container navbar d-flex">
         <nav class="justify-content-start" aria-label="breadcrumb">
           <ol class="breadcrumb">
-            <li class="breadcrumb-item">
-              <a href="index.html"><i class="moji moji-uk"></i>English</a>
-            </li>
             <li class="breadcrumb-item active">
-              <i class="moji moji-cn"></i>中文
+              <i class="moji moji-uk"></i>English
+            </li>
+            <li class="breadcrumb-item">
+              <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
               <a href="ug.html">ئۇيغۇرچە</a>
               <a href="bo.html">བོད་སྐད་</a>
-              <a href="tai.html">Tai</a>
+              ᨲ᩠ᩅᩫᨴᩱᩭ
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
@@ -43,10 +50,6 @@
             </li>
           </ol>
         </nav>
-        <div class="btn-group justify-content-end">
-          <a class="btn btn-outline-primary btn-sm active">漢</a>
-          <a href="zh.html" class="btn btn-outline-primary btn-sm">汉</a>
-        </div>
       </div>
     </header>
     <main class="flex-shrink-0">
@@ -68,10 +71,12 @@
             <span
               class="badge rounded-pill bg-secondary border-3"
               style="position: absolute; left: 105px; top: -25px"
-              >😔 憂鬱中</span
+              >😔 ᨡᩦᩋᩫ᩠ᨠᨡᩦᨧᩱ</span
             >
             <div class="card-body">
-              <h2 class="card-title" style="margin-left: 130px">山前</h2>
+              <h2 class="card-title" style="margin-left: 130px">
+                ᩑᩈ᩠ᨲᩮᩃᩣ (ᩉ᩠ᨶ᩶ᩣᨣᩬᨦ)
+              </h2>
               <table>
                 <tr>
                   <td>
@@ -81,7 +86,7 @@
                   </td>
                   <td>
                     <a href="https://twitter.com/saeziae"
-                      ><i class="moji moji-twitter"></i>Twitter @saeziae</a
+                      ><i class="moji moji-twitter"></i>ᨲ᩠ᩅᩥᨲ᩠ᨲᩮᩋᩁ᩺ @saeziae</a
                     >
                   </td>
                 </tr>
@@ -93,40 +98,45 @@
                   </td>
                   <td>
                     <a href="https://t.me/esteladaily"
-                      ><i class="moji moji-telegram"></i>Telegram 群</a
+                      ><i class="moji moji-telegram"></i>ᨠᩖᩩᨾᨲᩮᩃᩮᨠᩕᩣ᩠ᨾ</a
                     >
                   </td>
                 </tr>
                 <tr>
                   <td>
                     <a href="https://space.bilibili.com/173947605"
-                      ><i class="moji moji-bilibili"></i>嗶哩嗶哩</a
+                      ><i class="moji moji-bilibili"></i>ᨷᩦᩃᩦᨷᩦᩃᩦ</a
                     >
                   </td>
                   <td>
                     <a
                       href="https://www.youtube.com/channel/UCnqO6MvMqQ9pXKcwjp_gLBQ"
-                      ><i class="moji moji-youtube"></i>YouTube</a
+                      ><i class="moji moji-youtube"></i>ᨿᩪᨲᩪᨷ</a
                     >
                   </td>
                 </tr>
               </table>
-              <p>你好呀 👋🏻 這邊是山前</p>
+              <p>ᩈᨷᩣ᩠ᨿᨯᩦᨠᩬ᩵ᨧᩮ᩶ᩣ 👋🏻 ᨠᩪᩑᩈ᩠ᨲᩮᩃᩣ</p>
               <p>
                 <i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i>
-                跨兒驕傲。 <a href="https://mtf.wiki/">MtF-Wiki</a>維護人員。
+                ᨣᩫ᩠ᨶᨠ᩶ᩣ᩠ᨾᨻ᩠ᩆᩮᩋ᩠ᨦᩫᩋᩣ᩠ᨯ
+                <a href="https://mtf.wiki/">MtF-Wiki</a> ᨹᩪᩢᨣᩫ᩠ᨶ
               </p>
-              <p>JK格裙那可太喜歡了 🍱喫貨 吳語母語者</p>
-              <p>👩🏻‍🎓 現在在大學攻讀西班牙語。</p>
-              <p>📷 攝影。音遊，maimai陷入中，SDVX练习中。</p>
-              <p>✈️ 想要周遊世界的旅行者，去過好多國家了。</p>
-              <p>👀 喜歡語言學、NLP、煉丹之類亂七八糟的東西。</p>
-              <p>⌨️ <i class="moji moji-python"></i>Python 一把梭</p>
               <p>
-                <del><i class="moji moji-php"></i>PHP 是世界上最好的語言！</del>
+                ᨾᩢ᩠ᨠᩈ᩠ᨶᩥᩢJK 🍱 "ᩁᩢ᩠ᨠᨠᩥ᩠ᨶ" ᩋᩪ᩶<a
+                  href="https://en.wikipedia.org/wiki/Wu_Chinese"
+                  >ᨽᩣᩈᩣᨦᩪ</a
+                >
               </p>
-              <p><i class="moji moji-archlinux"></i>ArchLinux 用戶。</p>
-              <p><img src="assets/images/feed.png" /><br />投食山前</p>
+              <p>👩🏻‍🎓 ᩁ᩠ᨿᩁᨻᩣᩈᩣᩈᨸ᩠ᨶᩮᨴᩦ᩵ᨾᩉᩣᩅᩥᨴ᩠ᨿᩣᩃᩱ</p>
+              <p>📷 ᨳ᩵ᩣ᩠ᨿᩁ᩠ᨷᩪ ᨠᩣ᩠ᩁᩉᩖᩮ᩵ᩁᨯᩩᩁᨲᩕᩦ: maimai ᩓ Sound Voltex.</p>
+              <p>✈️ ᩁᩢ᩠ᨠᨴᩬ᩵ᨦᩋᩯ᩠᩵ᩅ ᨸᩱᩋᩯ᩠᩵ᩅᩉ᩠ᩃᩣ᩠ᨿᨴᩦ᩵ᩓ᩠ᩅ</p>
+              <p>👀 ᨾᩢ᩠ᨠᨽᩣᩈᩣᩈᨲ᩠ᨳ</p>
+              <p>
+                ⌨️ <i class="moji moji-python"></i>Python
+                <i class="moji moji-php"></i>PHP
+                <i class="moji moji-archlinux"></i>ArchLinux user.
+              </p>
             </div>
           </div>
         </div>
@@ -148,11 +158,7 @@
     <footer class="footer mt-auto py-3 bg-light">
       <div class="container">
         <span class="text-muted">
-          &copy;<span id="year"></span> 山前 <a href="amigos.html">友情链接</a>
-          <br />
-          <a href="https://icp.gov.moe/?keyword=20223233" target="_blank"
-            >萌ICP备20223233号</a
-          >
+          &copy;<span id="year"></span>
         </span>
       </div>
     </footer>
