--- a/ug.html
+++ b/ug.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html class="h-100" dir="rtl" lang="ug">
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,8 +7,9 @@
     <link href="assets/moji.css" rel="stylesheet">
     <link href="assets/bootstrap.rtl.min.css" rel="stylesheet">
     <style>
-        body{
-            font-family: 'Noto Sans','Noto Naskh Arabic UI';
+        @import url("https://fonts.googleapis.com/css2?family=Amiri&family=Noto+Sans");
+        main{
+            font-family:'Noto Sans','Amiri','Noto Sans Arabic',sans-serif;
         }
         .sociales a {
             text-decoration: none;
@@ -19,7 +19,6 @@
       }
     </style>
 </head>
-
 <body class="d-flex flex-column h-100">
     <header class="header">
         <div class="container navbar d-flex">
@@ -29,8 +28,10 @@
               <a href="index.html"><i class="moji moji-uk"></i>English</a>
             </li>
             <li class="breadcrumb-item">
-              <a href="zh.html"><i class="moji moji-cn"></i>中文</a>&nbsp;
-              <span>ئۇيغۇرچە<span>
+              <a href="zh.html"><i class="moji moji-cn"></i>中文</a>
+              ئۇيغۇرچە
+              <a href="bo.html">བོད་སྐད་</a>
+              <a href="tai.html">Tai</a>
             </li>
             <li class="breadcrumb-item">
               <a href="es.html"><i class="moji moji-es"></i>Español</a>
@@ -38,6 +39,9 @@
             <li class="breadcrumb-item">
               <a href="ar.html"><i class="moji moji-ar"></i>العربية</a>
             </li>
+            <li class="breadcrumb-item">
+                <a href="ru.html"><i class="moji moji-su"></i>Русский</a>
+              </li>
             <li class="breadcrumb-item">
                 <a href="eo.html"><i class="moji moji-eo"></i>Esperanto</a>
               </li>
@@ -72,7 +76,7 @@
                         </table>
                         </p>
                         <p>قارشى ئالىمىز! 👋🏻 مەن شانچەن. </p>
-                        <p><i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i>غۇرۇرلۇق كۋاشاڭبەلىق. <a href="https://mtf.wiki/">MtF-Wiki</a>-نىڭ ئەزا.</p>
+                        <p><i class="moji moji-trans" role="img" aria-label="🏳️‍⚧️"></i>غۇرۇرلۇق كۋاشىڭبەلىق. <a href="https://mtf.wiki/">MtF-Wiki</a>-نىڭ ئەزا.</p>
                         <p>يوپكانى سۆيمەن. 🍱 «غالچا».</p>
                         <p>👩🏻‍🎓  مەن ئۇنىۋېرسىتېتتا ئىسپانچەن ئۆگەنۋاتمەن.</p>
                         <p>📷 سۈرەتكە ئالماق. مۇزىكا ئويۇن.</p>
